Enhance deploy workflow with caching and formatting
Updated the deployment workflow to include a cache step and improved formatting for npm commands.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,12 +19,13 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm install
+        run: |
+          npm install
 
       - name: Build Next.js static site
         run: |
+          npm ci
           npm run build
-          npm run export
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
